--- a/app/src/main/res/drawable/logo.xml
+++ b/app/src/main/res/drawable/logo.xml
@@ -6,32 +6,29 @@
     android:viewportHeight="985.7">
 
     <path
-        android:fillColor="#FFFFFF"
-        android:pathData="M 0 0 H 1024 V 985.7 H 0 V 0 Z" />
-    <path
-        android:fillColor="#222"
+        android:fillColor="@color/colorAccent"
         android:pathData="M809.1,321.3H660.1l-43.3-133.4l-10.3-31.7c-16.9-52.2-73-80.7-125.2-63.8
 c-30.3,9.8-54,33.5-63.8,63.8l-10.3,31.7h0.4c7.6-35.3,42.3-57.8,77.6-50.3c20.9,4.5,38.3,18.9,46.6,38.6c0.6,1.2,1.1,2.4,1.6,3.6
 l65.8,202.5c3,9.3,11.7,15.6,21.4,15.6h213c21.1,0,30.3,26,15,39.4l0,0c28-22.8,32.2-64,9.3-92C846,330.5,828.1,321.7,809.1,321.3z" />
     <path
-        android:fillColor="#999"
+        android:fillColor="@color/colorAccentDark"
         android:pathData="M928.2,389.9c-13.2-41-51.4-68.7-94.5-68.6h-24.6c36.1,0.8,64.7,30.7,63.9,66.8
 c-0.4,19.2-9.3,37.3-24.2,49.4c0,0-1.1,1-1.8,1.4L674.7,564c-7.9,5.8-11.3,16-8.2,25.3l65.8,202.5c6.7,20.5-16.4,37.6-34,25.7
 c29.8,20.3,70.5,12.6,90.8-17.2c10.9-16,14.2-36.1,8.8-54.7l-46.3-142.5l140.4-102C927,475.7,941.6,430.8,928.2,389.9z" />
     <path
-        android:fillColor="#555"
+        android:fillColor="@color/colorAccentDark"
         android:pathData="M805.3,768.1l-7.3-22.5c9.9,34.7-10.2,70.9-45,80.8c-18.6,5.3-38.7,2.1-54.7-8.8l-0.7-0.5
 l-0.5-0.4L525.2,691.8c-7.9-5.7-18.6-5.7-26.5,0L326.4,817c-16.9,12.3-39.3-2.9-35.4-22.4c-9,35,12.2,70.6,47.2,79.6
 c18.8,4.8,38.7,1,54.4-10.3L512,777.1l135.1,98.1l5.4,3.9c16.9,12.4,37.3,19.1,58.3,19.1c31.9-0.1,61.9-15.4,80.6-41.2
 C810.2,831.3,815.3,798.2,805.3,768.1z" />
     <path
-        android:fillColor="#222"
+        android:fillColor="@color/colorAccent"
         android:pathData="M354.4,876.2c-36.1,0-65.4-29.2-65.4-65.4c0-5.5,0.7-11,2.1-16.3c0.2-0.9,0.4-1.9,0.7-2.8
 l0.3-1.1l65.5-201.5c3.1-9.3-0.3-19.5-8.2-25.3L177,438.9c-16.3-11.8-9.9-36.4,8.3-40.3c-35.9,3.6-62.1,35.7-58.5,71.7
 c1.8,18,11.1,34.5,25.5,45.5l0,0l120,87.2l-53.6,165.1c-2.1,6.4-3.5,13-4.3,19.7c-2.9,24.6,3.6,49.3,18.3,69.2
 c18.8,25.8,48.7,41.1,80.6,41.2c21,0,41.4-6.7,58.3-19.1l21.1-15.3C381.5,871.9,368.1,876.2,354.4,876.2z" />
     <path
-        android:fillColor="#999"
+        android:fillColor="@color/colorAccentDark"
         android:pathData="M471.6,136.2c-30.8,0-57.5,21.5-64,51.7h-0.4l-43.3,133.4H190.3h-2.2
 c-54.9,1.1-98.4,46.5-97.3,101.4c0.6,31.1,15.8,60.1,41,78.4l20.4,14.8l0,0c-28.8-21.9-34.3-62.9-12.5-91.6
 c11-14.4,27.4-23.7,45.5-25.5c2.4-0.2,4.6-0.4,7-0.4h211c9.8,0,18.4-6.3,21.4-15.6l65.9-202.7c6.3-19.5,32.5-20.7,41.3-3.6
