--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -1,49 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
+       android:background="#00000000"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
 
       <android.support.v7.widget.Toolbar
           android:id="@+id/toolbar"
           android:layout_width="match_parent"
-          android:layout_height="56dp"
-          android:background="?attr/colorPrimary"
-          android:fitsSystemWindows="true" />
+          android:layout_height="wrap_content"
+          android:fitsSystemWindows="true"/>
+
+         <RelativeLayout
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:layout_marginTop="@dimen/toolbar_size"
+             android:descendantFocusability="beforeDescendants"
+             android:focusable="true"
+             android:focusableInTouchMode="true">
+
+         <ImageView
+             android:layout_width="40dp"
+             android:id="@+id/logo"
+             app:srcCompat="@drawable/logo"
+             android:layout_centerHorizontal="true"
+             android:layout_height="40dp" />
+         <TextView
+             android:layout_width="match_parent"
+             android:id="@+id/title"
+             android:layout_below="@+id/logo"
+             android:text="Welcome back Zeviooer"
+             android:gravity="center"
+             android:textSize="22sp"
+             android:layout_height="wrap_content" />
+         </RelativeLayout>
 
    </android.support.design.widget.AppBarLayout>
 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:layout_marginTop="@dimen/toolbar_size"
+       app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true">
 
-      <ImageView
-          android:layout_width="40dp"
-          android:id="@+id/logo"
-          app:srcCompat="@drawable/logo"
-          android:layout_centerHorizontal="true"
-          android:layout_marginTop="62dp"
-          android:layout_height="40dp" />
-      <TextView
-          android:layout_width="match_parent"
-          android:id="@+id/title"
-          android:layout_below="@+id/logo"
-          android:text="Welcome back Zeviooer"
-          android:gravity="center"
-          android:textSize="22sp"
-          android:layout_height="wrap_content" />
-
          <zevioo.zampple.com.zevioo.view.EditView
-             android:layout_below="@+id/title"
              android:id="@+id/email"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
@@ -68,4 +75,4 @@
       </RelativeLayout>
 
 
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
