--- a/app/src/main/res/drawable/gender_empty.xml
+++ b/app/src/main/res/drawable/gender_empty.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <stroke android:width="1dp" android:color="#222222" />
+    <stroke android:width="1dp" android:color="#ddd" />
     <size android:height="25dp"
         android:width="25dp"/>
 </shape>
