--- a/app/src/main/res/drawable/gender_selected.xml
+++ b/app/src/main/res/drawable/gender_selected.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#222222" />
+    <solid android:color="#52575e" />
    <size android:height="25dp"
        android:width="25dp"/>
 </shape>
