--- a/app/src/main/res/layout/edit.xml
+++ b/app/src/main/res/layout/edit.xml
@@ -26,9 +26,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
-                android:textSize="22sp"
+                android:textSize="18sp"
                 android:layout_centerVertical="true"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/darker_gray"
+                android:textColorHint="@color/lighter_gray"
                 android:inputType="textPassword"
                 android:background="@android:color/transparent"
                 android:layout_toLeftOf="@+id/error"
@@ -37,7 +38,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="22sp"
+                android:textSize="18sp"
                 android:layout_centerVertical="true"
                 android:textColor="@color/red"
                 android:background="@android:color/transparent"
@@ -47,9 +48,9 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="22sp"
+                android:textSize="18sp"
                 android:layout_centerVertical="true"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@color/lighter_gray"
                 android:background="@android:color/transparent"
                 android:layout_toLeftOf="@+id/error"
                 android:layout_marginRight="8dp"
@@ -72,5 +73,5 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_alignBottom="@+id/layer"
-        android:background="#22000000" />
+        android:background="#000000" />
 </RelativeLayout>
