--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -1,25 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-   <android.support.design.widget.AppBarLayout
-       android:id="@+id/app_bar"
-       android:layout_width="match_parent"
-       android:background="#00000000"
-       android:layout_height="wrap_content"
-       android:fitsSystemWindows="true">
 
       <android.support.v7.widget.Toolbar
           android:id="@+id/toolbar"
           android:layout_width="match_parent"
+          android:background="@android:color/transparent"
           android:layout_height="wrap_content"
-          android:fitsSystemWindows="true"/>
+          android:fitsSystemWindows="true">
 
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             android:layout_marginTop="@dimen/toolbar_size"
+             android:layout_marginTop="56dp"
              android:descendantFocusability="beforeDescendants"
              android:focusable="true"
              android:focusableInTouchMode="true">
@@ -40,12 +35,13 @@
              android:layout_height="wrap_content" />
          </RelativeLayout>
 
-   </android.support.design.widget.AppBarLayout>
+  </android.support.v7.widget.Toolbar>
 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       app:layout_behavior="@string/appbar_scrolling_view_behavior"
+       android:layout_below="@+id/toolbar"
+       android:layout_marginTop="8dp"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true">
@@ -65,6 +61,7 @@
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:layout_marginTop="4dp"
+             android:textSize="12sp"
              android:gravity="center"
              android:text="@string/login_forgot_pass"
              android:layout_width="match_parent"
@@ -75,4 +72,4 @@
       </RelativeLayout>
 
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
