--- a/app/src/main/res/layout/registration_activity.xml
+++ b/app/src/main/res/layout/registration_activity.xml
@@ -3,25 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-   <android.support.design.widget.AppBarLayout
-       android:id="@+id/app_bar"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:fitsSystemWindows="true">
-
-      <android.support.v7.widget.Toolbar
-          android:id="@+id/toolbar"
-          android:layout_width="match_parent"
-          android:layout_height="56dp"
-          android:background="?attr/colorPrimary"
-          android:fitsSystemWindows="true" />
-
-   </android.support.design.widget.AppBarLayout>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:background="@android:color/transparent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:layout_marginTop="@dimen/toolbar_size"
+       android:layout_marginTop="56dp"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true">
@@ -31,7 +23,6 @@
           android:id="@+id/logo"
           app:srcCompat="@drawable/logo"
           android:layout_centerHorizontal="true"
-          android:layout_marginTop="62dp"
           android:layout_height="40dp" />
       <TextView
           android:layout_width="match_parent"
@@ -41,13 +32,14 @@
           android:gravity="center"
           android:textSize="22sp"
           android:layout_height="wrap_content" />
-
+</RelativeLayout>
+    </android.support.v7.widget.Toolbar>
       <android.support.v4.widget.NestedScrollView
           android:id="@+id/scroll"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-         android:layout_below="@+id/title"
-          app:layout_behavior="@string/appbar_scrolling_view_behavior">
+          android:layout_below="@+id/toolbar"
+          android:layout_marginTop="8dp">
 
       <LinearLayout
           android:layout_width="match_parent"
@@ -83,9 +75,11 @@
     app:srcCompat="@drawable/gender_empty"
     android:layout_height="wrap_content" />
       <TextView
+          android:id="@+id/male_text"
           android:layout_toEndOf="@+id/male_img"
           android:layout_marginStart="8dp"
-          android:textSize="20sp"
+          android:textSize="18sp"
+          android:textColor="@color/lighter_gray"
           android:layout_centerVertical="true"
           android:text="@string/registration_male"
           android:layout_width="wrap_content"
@@ -105,9 +99,11 @@
           app:srcCompat="@drawable/gender_empty"
           android:layout_height="wrap_content" />
       <TextView
+          android:id="@+id/female_text"
           android:layout_toEndOf="@+id/female_img"
           android:layout_marginStart="8dp"
-          android:textSize="20sp"
+          android:textColor="@color/lighter_gray"
+          android:textSize="18sp"
           android:layout_centerVertical="true"
           android:text="@string/registration_female"
           android:layout_width="wrap_content"
@@ -120,16 +116,16 @@
              android:layout_height="1dp"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
-             android:background="#22000000" />
+             android:background="#000000" />
 
 
          <TextView
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
-             android:textSize="22sp"
+             android:textSize="18sp"
              android:minHeight="48dp"
              android:gravity="center_vertical"
-             android:textColor="@android:color/darker_gray"
+             android:textColor="@color/lighter_gray"
              android:text="@string/registration_dob"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
@@ -138,7 +134,7 @@
              android:layout_height="1dp"
              android:layout_marginStart="8dp"
              android:layout_marginEnd="8dp"
-             android:background="#22000000" />
+             android:background="#000000" />
          <zevioo.zampple.com.zevioo.view.Spinner
              android:id="@+id/country"
              android:layout_width="match_parent"
@@ -162,6 +158,7 @@
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:layout_marginTop="4dp"
+             android:textSize="12sp"
              android:text="@string/password_explain"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />
@@ -179,8 +176,8 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:layout_toEndOf="@+id/terms_check"
-                android:layout_marginStart="8dp"
-                android:textSize="16sp"
+                android:layout_marginStart="16dp"
+                android:textSize="14sp"
                 android:layout_centerVertical="true"
                 android:text="@string/registrations_terms"
                 android:layout_width="wrap_content"
@@ -192,6 +189,3 @@
 </android.support.v4.widget.NestedScrollView>
 
       </RelativeLayout>
-
-
-</RelativeLayout>
