--- a/app/src/main/res/layout/spinner.xml
+++ b/app/src/main/res/layout/spinner.xml
@@ -27,7 +27,7 @@
                 android:layout_height="wrap_content"
                 android:imeOptions="actionDone"
                 android:dropDownWidth="200dp"
-                android:textSize="22sp"
+                android:textSize="18sp"
                 android:layout_centerVertical="true"
                 android:textColor="@android:color/darker_gray"
                 android:inputType="textPassword"
@@ -38,7 +38,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="22sp"
+                android:textSize="18sp"
                 android:layout_centerVertical="true"
                 android:textColor="@color/red"
                 android:background="@android:color/transparent"
@@ -48,7 +48,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="22sp"
+                android:textSize="18sp"
                 android:layout_centerVertical="true"
                 android:textColor="@android:color/darker_gray"
                 android:background="@android:color/transparent"
@@ -73,5 +73,5 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_alignBottom="@+id/layer"
-        android:background="#22000000" />
+        android:background="#000000" />
 </RelativeLayout>
