--- a/app/src/main/res/drawable/default_dot.xml
+++ b/app/src/main/res/drawable/default_dot.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@android:color/darker_gray" />
+    <solid android:color="#a6aaa8" />
     <size android:height="8dp"
         android:width="8dp"/>
 </shape>
