--- a/app/src/main/res/drawable/selected_dot.xml
+++ b/app/src/main/res/drawable/selected_dot.xml
@@ -2,7 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@android:color/holo_blue_light" />
+    <solid android:color="#3f5796" />
    <size android:height="8dp"
        android:width="8dp"/>
 </shape>
