--- a/app/src/main/res/layout/spinner.xml
+++ b/app/src/main/res/layout/spinner.xml
@@ -39,7 +39,7 @@
             <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                app:srcCompat="@drawable/spinner_closed"
+                android:src="@drawable/spinner_closed"
                 android:layout_alignRight="@+id/data"
                 android:layout_centerVertical="true"
                 android:id="@+id/arrow"/>
@@ -66,7 +66,7 @@
             <ImageView
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                app:srcCompat="@drawable/error"
+                android:src="@drawable/error"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:id="@+id/error"/>
