--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -54,7 +54,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                app:srcCompat="@drawable/email"
+                android:src="@drawable/email"
                 android:id="@+id/register_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -78,7 +78,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                app:srcCompat="@drawable/login"
+                android:src="@drawable/login"
                 android:id="@+id/login_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
