--- a/app/src/main/res/layout/start_pager_item.xml
+++ b/app/src/main/res/layout/start_pager_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:scaleType="centerInside"
         android:layout_height="250dp"
-        app:srcCompat="@drawable/start_page0"
+        android:src="@drawable/start_page0"
         android:id="@+id/iv" />
     <TextView
         android:layout_below="@+id/iv"
