--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/parent_layout"
     android:layout_height="match_parent">
 
       <android.support.v7.widget.Toolbar
@@ -14,7 +15,7 @@
          <RelativeLayout
              android:id="@+id/logo_layout"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
+             android:layout_height="wrap_content"
              android:layout_marginTop="56dp"
              android:descendantFocusability="beforeDescendants"
              android:focusable="true"
