--- a/app/src/main/res/layout/registration_activity.xml
+++ b/app/src/main/res/layout/registration_activity.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/parent_layout"
     android:layout_height="match_parent">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -152,6 +153,7 @@
              android:layout_height="wrap_content" />
 
          <RelativeLayout
+             android:id="@+id/terms_layout"
              android:layout_margin="16dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
