--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -31,7 +31,7 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="48dp"
         android:text="Facebook login"
         android:id="@+id/facebook_btn"
         android:layout_margin="16dp"
@@ -40,7 +40,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:id="@+id/actions"
-        android:layout_margin="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_height="wrap_content">
