--- a/app/src/main/res/layout/start_pager_item.xml
+++ b/app/src/main/res/layout/start_pager_item.xml
@@ -3,19 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:gravity="center"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="wrap_content"
         android:scaleType="centerInside"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:src="@drawable/start_page0"
         android:id="@+id/iv" />
     <TextView
         android:layout_below="@+id/iv"
         android:gravity="center"
         android:textSize="22sp"
-        android:layout_margin="16dp"
+        android:layout_margin="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv" />
