--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -62,6 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/textaki1"
                 android:layout_toEndOf="@+id/register_icon"
                 android:layout_width="match_parent"
                 android:gravity="center_vertical"
@@ -86,6 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/textaki"
                 android:layout_toEndOf="@+id/login_icon"
                 android:text="@string/start_login"
                 android:layout_width="match_parent"
