--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -4,8 +4,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:id="@+id/logo_layout"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="40dp"
+            android:layout_centerVertical="true"
+            android:src="@drawable/logo"
+            android:layout_height="40dp" />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:text="zevioo"
+            android:minHeight="40dp"
+            android:gravity="center_vertical"
+            android:layout_toRightOf="@+id/logo"
+            android:textSize="30sp"
+            android:textColor="@color/colorAccent"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
     <TextView
-        android:layout_marginTop="32dp"
+        android:layout_below="@+id/logo_layout"
+        android:layout_marginTop="8dp"
         android:gravity="center"
         android:textSize="18sp"
         android:id="@+id/subtitle"
