--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
 
     <color name="red">#FF0000</color>
     <color name="black">#000000</color>
-    <color name="lighter_gray">#ddd</color>
+    <color name="lighter_gray">#a6aaa8</color>
+    <color name="gdpr_bg_color">#1c8adb</color>
+    <color name="gdpr_preferences_bg_color">#e6ebf0</color>
 </resources>
