--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -11,6 +11,7 @@
         android:background="@color/colorPrimary"
         android:fitsSystemWindows="true">
         <TextView
+            android:paddingStart="-24dp"
             android:id="@+id/title"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -20,6 +21,7 @@
             android:layout_height="match_parent" />
     </android.support.v7.widget.Toolbar>
     <FrameLayout
+        android:layout_marginTop="1dp"
         android:id="@+id/frame_layout"
         android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
