--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -9,11 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
+        android:elevation="2dp"
         android:fitsSystemWindows="true">
         <TextView
-            android:paddingStart="-24dp"
+            android:paddingStart="-28dp"
             android:id="@+id/title"
-            android:textSize="18sp"
+            android:textSize="22sp"
             android:textStyle="bold"
             android:gravity="center"
             android:textColor="@color/colorAccent"
