--- a/app/src/main/res/layout/suggestions_fragment.xml
+++ b/app/src/main/res/layout/suggestions_fragment.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
 
+
+
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
@@ -14,4 +16,33 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </android.support.v4.widget.SwipeRefreshLayout>
+    <RelativeLayout
+        android:id="@+id/new_layout"
+        android:layout_width="wrap_content"
+        android:padding="8dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/new_suggestions_bg"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/new_icon"
+            android:src="@drawable/up_arrow"
+            android:layout_width="15dp"
+            android:layout_centerVertical="true"
+            android:layout_height="15dp" />
+        <TextView
+            android:id="@+id/new_text"
+            android:layout_toEndOf="@+id/new_icon"
+            android:textStyle="bold"
+            android:text="1 New suggestion"
+            android:textSize="12sp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_centerVertical="true"
+            android:textColor="@color/colorPrimary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
 </RelativeLayout>
