--- a/app/src/main/res/drawable/new_suggestions_bg.xml
+++ b/app/src/main/res/drawable/new_suggestions_bg.xml
@@ -1,9 +1,4 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/colorAccent" />
-    <corners
-        android:bottomLeftRadius="90dp"
-        android:bottomRightRadius="90dp"
-        android:topLeftRadius="90dp"
-        android:topRightRadius="90dp" />
+    <corners android:radius="90dp"/>
 </shape>
