--- a/app/src/main/res/layout/suggestion_user.xml
+++ b/app/src/main/res/layout/suggestion_user.xml
@@ -66,8 +66,11 @@
                 android:id="@+id/btn_follow"
                 android:textSize="8sp"
                 android:text="@string/follow"
+                android:background="@drawable/follow_bg"
                 android:layout_width="60dp"
-                android:layout_height="32dp"
+                android:textColor="@color/colorAccent"
+                android:layout_height="28dp"
+                android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true" />
 
             <ProgressBar
@@ -81,11 +84,12 @@
                 android:layout_width="60dp"
                 android:layout_height="32dp"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/spinner_closed" />
+                android:src="@drawable/actions" />
 
         </RelativeLayout>
 
         <RelativeLayout
+            android:layout_marginTop="8dp"
             android:id="@+id/grade_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
