--- a/app/src/main/res/layout/suggestions_fragment.xml
+++ b/app/src/main/res/layout/suggestions_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
@@ -20,7 +21,7 @@
         android:id="@+id/new_layout"
         android:layout_width="wrap_content"
         android:padding="8dp"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
         android:background="@drawable/new_suggestions_bg"
         android:layout_height="wrap_content">
@@ -45,4 +46,4 @@
             android:layout_height="wrap_content" />
 
     </RelativeLayout>
-</RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
